@@ -13,6 +13,7 @@
  ** (r204) Invalid itemIDs are now checked and purged from the cache when a new version of WoW is detected
  ** (r205) Spell durations are now removed from item cooldown name data when it is parsed
  ** (r206) The group settings interface will now longer incorrectly show in the icon editor after moving a group if the group settings tab is not selected
+ ** (r208) Loading an icon into the icon editor from a different group than the previously loaded icon while the Group Settings tab is selected will now cause the new icon's group to be loaded in the Group Settings tab
 
  
 ===v4.5.2===
